@@ -1,4 +1,9 @@
 
+2025-05-19  David Declerck <david.declerck@ocamlpro.com>
+
+	* common.c (cob_set_date_from_epoch): fix incorrect conversion
+	  of epoch (was off by one day)
+
 2024-12-31  Simon Sobisch <simonsobisch@gnu.org>
 
 	* common.c [WITH_EXTENDED_SCREENIO]: adjusted curses includes/defines
